# telemetry_with_fastapi_langchain_langgraph

./: main.py  pyproject.toml
data/: console output.md
docs/: project.md
src/api/: app.py
src/api/routers/: __init__.py  analytics.py  chat.py  feedback.py  health_and_root.py  search.py  summarize.py
src/db/: sql.py  vector_db.py
src/llm/: mock_llm.py
src/middleware/: request_context.py
src/orchestration/: workflow.py
src/telemetry/: context.py  exporters.py  metrics.py  processors.py  provider.py  setup_telemetry.py
src/workflows/: agent.py  rag.py  summarize.py
