[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telemetry-with-fastapi-langchain-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.2",
    "langchain>=1.3.10",
    "langgraph>=1.2.6",
    "pip>=26.1.2",
    "uvicorn>=0.49.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
telemetry = [
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
]
